Adicionado o arquivo helper.php

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
        "files" : [
            "conexao/conn.php",
             "conexao/funcao.php",
+            "conexao/helper.php",
             "init.php"
+            
         ] 
     }
     
